@@ -1,6 +1,6 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-pda/synce-libsynce/Attic/synce-libsynce-0.7.ebuild,v 1.3 2003/09/06 22:21:40 msterret Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-pda/synce-libsynce/Attic/synce-libsynce-0.7.ebuild,v 1.4 2004/04/25 22:39:20 agriffis Exp $
 
 DESCRIPTION="Synchronize Windows CE devices with computers running GNU/Linux, like MS ActiveSync."
 HOMEPAGE="http://sourceforge.net/projects/synce/"
@@ -14,7 +14,7 @@ IUSE="gnome"
 DEPEND="virtual/glibc"
 
 src_compile() {
-	econf
+	econf || die "econf failed"
 	emake || die
 }
 
