@@ -1,6 +1,6 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-pda/synce-libsynce/Attic/synce-libsynce-0.8.1.ebuild,v 1.3 2004/02/29 00:10:15 liquidx Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-pda/synce-libsynce/Attic/synce-libsynce-0.8.1.ebuild,v 1.4 2004/04/25 22:39:20 agriffis Exp $
 
 DESCRIPTION="Synchronize Windows CE devices with computers running GNU/Linux, like MS ActiveSync."
 HOMEPAGE="http://sourceforge.net/projects/synce/"
@@ -14,7 +14,7 @@ IUSE=""
 DEPEND=""
 
 src_compile() {
-	econf
+	econf || die "econf failed"
 	emake || die
 }
 
